--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
                 <img src="./images/close.svg" alt="close" class="absolute top-0 bottom-0 my-auto right-10 cursor-pointer">
             </div>
         </div>
-        <div class="containers">
+        <div class="max-w-[1280px] mx-auto">
             <div class="header">
                 <div class="header-down relative bg-white">
                     <ul class="navbar-list flex items-center justify-center">
-                        <li class="flex py-6 px-4">
+                        <li class="header-item flex py-6 px-4">
                             <a href="#" class="text-[#697586] text-normal text-base leading-6">Products</a>
                         </li>
-                        <li class="flex py-6 px-4">
+                        <li class="header-item flex py-6 px-4">
                             <a href="#" class="text-[#697586] text-normal text-base leading-6">Story</a>
                         </li>
-                        <li class="flex py-6 px-4">
+                        <li class="header-item flex py-6 px-4">
                             <a href="#" class="text-[#697586] text-normal text-base leading-6">Blog</a>
                         </li>
-                        <li class="flex py-6 px-4">
+                        <li class="header-item flex py-6 px-4">
                             <a href="#" class="text-[#697586] text-normal text-base leading-6">Collections</a>
                         </li>
-                        <li class="flex py-6 px-4">
+                        <li class="header-item flex py-6 px-4">
                             <a href="#" class="text-[#697586] text-normal text-base leading-6">Contact</a>
                         </li>
                     </ul>
-                    <div class="button-wrapper absolute flex items-center top-0 bottom-0 px-auto right-[-50px] gap-2">
+                    <div class="button-wrapper absolute flex items-center top-0 bottom-0 px-auto right-0 gap-2">
                         <button class="w-[100px] py-[9px] border-[#CDD5DF] border-[1px] rounded-[64px] inline-block flex items-center justify-center gap-1">
                             <img src="images/shopping_bag.svg" alt="">
                             <span class="text-normal text-base leading-[24px] text-center">Cart</span>
@@ -95,7 +95,7 @@
                 </div>
             </div>
         </section>
-        <section class="pt-[160px] mt-[206px] pb-[160px]">
+        <section class="section-2 pt-[160px] mt-[206px] pb-[160px]">
            <div class="flex flex-col items-center max-w-[741px] mx-auto ">
             <span class="inline-block w-[95px] py-1 bg-[#EDEBF7] text-[16px] text-center rounded-[24px] text-[#3C2769]">About us</span>
             <h2 class="text-[48px] text-[#202939] mt-[22px]">The beautiful story</h2>
@@ -114,7 +114,7 @@
             <div class="flex flex-col items-center max-w-[1280px] mx-auto">
                 <span class="inline-block w-[95px] py-1 bg-[#EDEBF7] text-[16px] text-center rounded-[24px] text-[#3C2769] ">Best sellers</span>
                 <h2 class="mt-[14px] max-w-[768px] text-[48px] text-[#202939] leading-[57.6px] mx-auto text-center">The most trusted products by our customers</h2>
-                <div class="mt-[80px] card-wrap gap-[48px] flex items-center justify-between">
+                <div class="abt-card-wrapper mt-[80px] card-wrap gap-[48px] grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1">
                     <div class="card bg-[#F3F5F7] rounded-[16px] pt-[45px] pb-[24px] pr-[15.6px]">
                         <img src="images/about-img-1.png" alt="">
                         <div class="mt-[69px] pl-4 flex items-center justify-between">
@@ -172,6 +172,155 @@
                     </button>
                     </div>
                     <img src="./images/lotion.png" alt="lotion img" class="mt-[64px]">
+                </div>
+            </div>
+         </section>
+         <section class="mt-[160px]">
+            <div class="max-w-[1280px] mx-auto flex flex-col items-center">
+                <span class="inline-block w-[95px] py-1 bg-[#EDEBF7] text-[16px] text-center rounded-[24px] text-[#3C2769] ">How it works</span>
+                <h2 class="mt-[14px] max-w-[768px] text-[48px] text-[#202939] leading-[57.6px] mx-auto text-center">It’s easy as 1, 2, 3</h2>
+                <p class="max-w-[744px] text-[18px] text-[#697586] text-center mt-[28px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, suspendisse varius enim in eros. Elementum tristique duis cursus, mi quis viverra ornare eros dolor.</p>
+                <div class="abt-wrapper grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 gap-[48px] mt-[80px]">
+                    <div class="abt-card px-[39px] flex flex-col items-center">
+                        <div class="img-wrapper w-[100px] h-[100px] flex items-center justify-center bg-[#EDEBF7] rounded-full">
+                            <img src="./images/clean_hands.svg" alt="clean hands">
+                        </div>
+                        <h3 class="text-[24px] text-[#202939] text-center mt-[31px]">Apply the product</h3>
+                        <p class="text-[16px] text-[#4B5563] text-center mt-[26px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                    </div>
+                    <div class="abt-card px-[39px] flex flex-col items-center">
+                        <div class="img-wrapper w-[100px] h-[100px] flex items-center justify-center bg-[#EDEBF7] rounded-full">
+                            <img src="./images/timelapse.svg" alt="clean hands">
+                        </div>
+                        <h3 class="text-[24px] text-[#202939] text-center mt-[31px]">Wait for the skin to absorb</h3>
+                        <p class="text-[16px] text-[#4B5563] text-center mt-[26px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                    </div>
+                    <div class="abt-card px-[39px] flex flex-col items-center">
+                        <div class="img-wrapper w-[100px] h-[100px] flex items-center justify-center bg-[#EDEBF7] rounded-full">
+                            <img src="./images/check_circle.svg" alt="clean hands">
+                        </div>
+                        <h3 class="text-[24px] text-[#202939] text-center mt-[31px]">And that’s it</h3>
+                        <p class="text-[16px] text-[#4B5563] text-center mt-[26px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                    </div>
+                </div>
+
+            </div>
+         </section>
+         <section class="mt-[160px]">
+            <div class="max-w-[1280px] mx-auto  flex flex-col gap-[160px]">
+                <div class="product-card flex items-center justify-between">
+                    <img src="./images/woman-1.png" alt="">
+                    <div class="max-w-[576px]">
+                        <span class="inline-block px-3 py-1 bg-[#EDEBF7] text-[16px] text-start rounded-[24px] text-[#3C2769] ">Smooth skin collection</span>
+                        <h2 class="mt-[14px] max-w-[768px] text-[48px] text-[#202939] leading-[57.6px]">For oily face skin</h2>
+                        <p class="max-w-[744px] text-[18px] text-[#697586] mt-[28px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit suspendisse Varius enim in eros elementum tristique, duis cursus mi quis viverra ornare, eros dolor interdum nulla ut commodo.</p>
+                        <div class="flex gap-[15.5px] mt-[37px]">
+                            <button class="w-[138px] rounded-[64px] border-[#CDD5DF] border-[1px] py-[17px] text-[#202939]">
+                                Shop now 
+                            </button>
+                            <button>
+                                Explore more >
+                            </button>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="product-card flex flex-row-reverse items-center justify-between">
+                    <img src="./images/woman-2.png" alt="">
+                    <div class="max-w-[576px]">
+                        <span class="inline-block px-3 py-1 bg-[#EDEBF7] text-[16px] text-start rounded-[24px] text-[#3C2769] ">Healthy tanning collection</span>
+                        <h2 class="mt-[14px] max-w-[768px] text-[48px] text-[#202939] leading-[57.6px]">For body skin</h2>
+                        <p class="max-w-[744px] text-[18px] text-[#697586] mt-[28px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit suspendisse Varius enim in eros elementum tristique, duis cursus mi quis viverra ornare, eros dolor interdum nulla ut commodo.</p>
+                        <div class="flex gap-[15.5px] mt-[37px]">
+                            <button class="w-[138px] rounded-[64px] border-[#CDD5DF] border-[1px] py-[17px] text-[#202939]">
+                                Shop now 
+                            </button>
+                            <button>
+                                Explore more >
+                            </button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+         </section>
+         <section class="mt-[160px] bg-[#F3F5F7] pt-[127px] pb-[160px]">
+            <div class="max-w-[1280px] mx-auto grid lg:grid-cols-2 md:grid-cols-1">
+                <div class="max-w-[514px] flex flex-col">
+                    <h2 class="mt-[14px] max-w-[768px] text-[48px] text-[#202939] leading-[57.6px]">Frequently asked questions</h2>
+                    <p  class="max-w-[744px] text-[18px] text-[#697586] mt-[27px]">Frequently asked questions ordered by popularity. Remember that if the visitor has not committed to the call to action, they may still have questions (doubts) that can be answered.</p>
+                    <button class="w-[151px] py-[17px] bg-[#CF4D74] rounded-[64px] text-white mt-[37px]">
+                        Contact us
+                    </button>
+                </div>
+                <div class="row-wrap flex flex-col gap-4">
+                    <div class="rows max-w-[683px] py-[13px] px-[23px] flex items-center justify-between bg-white rounded-[5px]">
+                        <p class="text-[#202939]">Are the fragrances in your products natural and safe?</p>
+                        <img src="./images/add.svg" alt="" class="cursor-pointer" >
+                    </div>
+                    <div class="rows max-w-[683px] py-[13px] px-[23px] flex items-center justify-between bg-white rounded-[5px]">
+                        <p class="text-[#202939]">Are Beautico products vegan?</p>
+                        <img src="./images/add.svg" alt="" class="cursor-pointer">
+                    </div>
+                    <div class="rows max-w-[683px] py-[13px] px-[23px] flex items-center justify-between bg-white rounded-[5px]">
+                        <p class="text-[#202939]">What are the expiry dates for Beautico products?</p>
+                        <img src="./images/add.svg" alt="" class="cursor-pointer">
+                    </div>
+                    <div class="rows max-w-[683px] py-[13px] px-[23px] flex items-center justify-between bg-white rounded-[5px]">
+                        <p class="text-[#202939]">Is your packaging environmentally friendly?</p>
+                        <img src="./images/add.svg" alt="" class="cursor-pointer">
+                    </div>
+                    <div class="rows max-w-[683px] py-[13px] px-[23px] flex items-center justify-between bg-white rounded-[5px]">
+                        <p class="text-[#202939]">Does Beautico products give me an allergic reaction?</p>
+                        <img src="./images/add.svg" alt="" class="cursor-pointer">
+                    </div>
+                </div>
+            </div>
+            
+         </section>
+         <section class="mt-[50px]">
+            <div class="max-w-[1280px] mx-auto">
+                <div class="flex items-center justify-between relative">
+                    <div>
+                        <span class="inline-block py-1 bg-[#EDEBF7] text-[16px] px-[12px] rounded-[24px] text-[#3C2769] ">Latest posts</span>
+                    <h2 class="mt-[14px] max-w-[768px] text-[48px] text-[#202939] leading-[57.6px]">From our blog</h2>
+                    <p class="max-w-[744px] text-[18px] text-[#697586] mt-[28px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <button class="w-[138px] rounded-[64px] border-[#CDD5DF] border-[1px] py-[17px] text-[#202939] absolute bottom-0 right-0">
+                        View all posts
+                    </button>
+                </div>
+                <div class="contract-wrapper mt-[80px] grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 gap-[32px]">
+                    <div class="bg-[#F3F5F7] pb-[32px] rounded-[20px]">
+                        <img src="./images/shampoo.png" alt="">
+                        <div class="px-[24px]">
+                            <h3 class="mt-[32px] text-[24px] text-[#202939] max-w-[277px]">Dry acne prone skincare routine</h3>
+                        <p class="mt-[7px] text-[16px] text-[#4B5565] max-w-[317px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
+                        <button class="mt-[24px]">
+                            Read more >
+                        </button>
+                        </div>
+                    </div>
+                    <div class="bg-[#F3F5F7] pb-[32px] rounded-[20px]">
+                        <img src="./images/shampoo-2.png" alt="">
+                        <div class="px-[24px]">
+                            <h3 class="mt-[32px] text-[24px] text-[#202939] max-w-[277px]">5 ingredients to calm down stressed out skin</h3>
+                        <p class="mt-[7px] text-[16px] text-[#4B5565] max-w-[317px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
+                        <button class="mt-[24px]">
+                            Read more >
+                        </button>
+                        </div>
+                    </div>
+                    <div class="bg-[#F3F5F7] pb-[32px] rounded-[20px]">
+                        <img src="./images/shampoo-3.png" alt="">
+                        <div class="px-[24px]">
+                            <h3 class="mt-[32px] text-[24px] text-[#202939] max-w-[277px]">How to use products for sensitive skin</h3>
+                        <p class="mt-[7px] text-[16px] text-[#4B5565] max-w-[317px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
+                        <button class="mt-[24px]">
+                            Read more >
+                        </button>
+                        </div>
+                    </div>
                 </div>
             </div>
          </section>
